games/tictactoe/src/snapshots/tabula_game_tictactoe__ui__tests__tictactoe_initial_320x640_responsive.snap
---
source: games/tictactoe/src/ui.rs
expression: "& $crate :: presentation ::\nrender_list_snapshot($crate :: presentation :: AsRenderList ::\nas_render_list(& list))"
---
camera origin=(0.000, 0.000) zoom=1.000
commands (total 19):
  0: rect [origin=(0.000, 184.000) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=0
  1: rect [origin=(106.667, 184.000) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=1
  2: rect [origin=(213.333, 184.000) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=2
  3: rect [origin=(0.000, 290.667) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=3
  4: rect [origin=(106.667, 290.667) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=4
  5: rect [origin=(213.333, 290.667) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=5
  6: rect [origin=(0.000, 397.333) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=6
  7: rect [origin=(106.667, 397.333) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=7
  8: rect [origin=(213.333, 397.333) size=(106.667, 106.667)] radii=uniform(0.000) fill=solid(#f4edf7ff) border=[width=1.000 color=#79747eff] layer=board(0) z=8
  9: rect [origin=(44.800, 228.800) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=0
  10: rect [origin=(151.467, 228.800) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=1
  11: rect [origin=(258.133, 228.800) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=2
  12: rect [origin=(44.800, 335.467) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=3
  13: rect [origin=(151.467, 335.467) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=4
  14: rect [origin=(258.133, 335.467) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=5
  15: rect [origin=(44.800, 442.133) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=6
  16: rect [origin=(151.467, 442.133) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=7
  17: rect [origin=(258.133, 442.133) size=(17.067, 17.067)] radii=uniform(8.533) fill=solid(#007044ff) border=none layer=overlay(20) z=8
  18: text "Your turn (X)" at=(160.000, 10.000) style=TitleLg align=Center max_width=none color=#1e1c21ff layer=hud(30) z=0
